<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical" android:layout_gravity="top|center_horizontal" android:background="@drawable/clikture_screen_vert_inside">
	<LinearLayout android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="100dip">
        <ImageView android:layout_marginLeft="12dip" android:layout_width="180dip" android:id="@+id/brandimg" android:layout_height="90dip" android:layout_marginTop="24dip"></ImageView>
    </LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:id="@+id/linearLayout2" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_marginTop="55dip">
		<TextView android:text="@string/Email" android:layout_height="wrap_content"
			android:id="@+id/email_t" android:layout_width="85dip" android:layout_marginLeft="55dip" android:textColor="@color/gray_dark"></TextView>
		<EditText android:maxLength="50" android:inputType="textEmailAddress"
			android:layout_marginRight="15dip" android:singleLine="true"
			android:id="@+id/email"
			android:layout_height="wrap_content" android:layout_width="150dip"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:id="@+id/linearLayout2" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView android:text="@string/Password"
			android:layout_height="wrap_content" android:id="@+id/pass_t"
			android:layout_width="85dip" android:layout_marginLeft="55dip" android:textColor="@color/gray_dark"></TextView>
		<EditText android:layout_marginRight="15dip"
			android:singleLine="true" android:password="true" android:id="@+id/pass" android:layout_height="wrap_content" android:maxLength="20" android:layout_width="150dip"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:id="@+id/linearLayout2" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="center_vertical">
		<TextView android:text="@string/Repassword" android:id="@+id/repass_t"
			android:layout_width="85dip" android:layout_height="wrap_content" android:layout_marginLeft="55dip" android:textColor="@color/gray_dark"></TextView>
		<EditText android:layout_height="wrap_content"
			android:password="true" android:singleLine="true" android:id="@+id/repass"
			android:layout_marginRight="15dip" android:maxLength="20" android:layout_width="150dip"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_width="wrap_content"
		android:id="@+id/linearLayout2">
		<CheckBox android:id="@+id/remember" android:text="@string/Remember_Login"
			android:layout_marginTop="10dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:checked="true"
			android:layout_marginLeft="90dip" android:textColor="@color/gray_dark"></CheckBox>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:id="@+id/linearLayout2" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Submit"
			android:id="@+id/submit" android:layout_below="@+id/remember"
			android:layout_marginLeft="90dip"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_toRightOf="@id/submit"
			android:layout_marginLeft="10dip" android:text="@string/Cancel"
			android:id="@+id/cancel"></Button>
	</LinearLayout>
</LinearLayout>
