<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical" android:layout_gravity="top|center_horizontal" android:background="@drawable/clikture_screen_vert">
	<LinearLayout android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="100dip">
        <ImageView android:layout_marginLeft="12dip" android:layout_width="180dip" android:id="@+id/brandimg" android:layout_height="80dip" android:layout_marginTop="26dip"></ImageView>
    </LinearLayout>
	<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:gravity="center" android:layout_width="fill_parent" android:layout_marginTop="25dip">
		<ImageView android:layout_width="250dip" android:id="@+id/image" android:layout_height="200dip" android:adjustViewBounds="false"></ImageView>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_marginTop="10dip" android:layout_width="fill_parent" android:gravity="center">
	<Button android:layout_height="wrap_content" android:layout_alignParentTop="true" android:text="@string/Save"
				android:id="@+id/save" android:layout_width="70dip"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:id="@+id/submit" android:text="@string/Submit" android:layout_width="70dip" android:layout_marginLeft="15dip"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:id="@+id/cancel"
				android:layout_alignParentTop="true" android:text="@string/Discard" android:layout_width="70dip" android:layout_marginLeft="15dip"></Button>
	
	</LinearLayout>	
</LinearLayout>
